--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Choco Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel = "stylesheet" type = "text/css" href ="css/mystyles.css">
     <script src="main.js"></script>
 </head>
 <body>
+        <div class="jumbotron">
     <h1>A this web site about chocolate</h1>
+    
+   
+    </div>
 </body>
 </html>
