--- a/index.html
+++ b/index.html
@@ -1,19 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Choco Home</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel = "stylesheet" type = "text/css" href ="css/mystyles.css">
-    <script src="main.js"></script>
+    <title>Choco home </title>
 </head>
 <body>
-        <div class="jumbotron">
-    <h1>A this web site about chocolate</h1>
-    <h3>We will see some of the world's chocolates!</h3>
-    <p>It arrived to Europe in 16<sup>th</sup> century</p>
-
+    <div class="jumbotron">
+        <h1>A site about chocolate</h1>
+        <h3>We will see some of the world's chocolates!</h3>
     </div>
+    <p>It arrived to Europe in 16<sup>th</sup> century</p>
+    <ol  >
+        <li>It arrived to Europe in 16<sup>th</sup> century</li>
+        <li>The first years, only drinking chocolate was available</li>
+        <li>It was considered luxury food!</li>
+        <li>It contains <ins>caffeine</ins></li>
+        <li><mark>Your brain needs it after hard work!</mark></li>
+    </ol>
+    <!-- This ia a linked to Wikipadia image-->
+    <a href = "https://en.wikipedia.org/wiki/Chocolate" target="_blank">
+        <img src="images/chocolatethings.jpg" 
+            alt = "This is a linked to Wikipedia image" 
+            title = "I love Chocolate!! Click to see more!">
+    </a>
 </body>
 </html>
